--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    aaptOptions {
+        noCompress "tflite"
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -140,6 +145,7 @@ dependencies {
 
     implementation 'com.google.mlkit:image-labeling:17.0.7'
     implementation 'com.google.android.gms:play-services-mlkit-image-labeling:16.0.7'
-    implementation 'com.google.mlkit:object-detection:17.0.0'
+//    implementation 'com.google.mlkit:object-detection:17.0.0'
+    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
 
 }
