--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,7 @@ dependencies {
     // gmaps
     implementation "com.google.maps.android:maps-compose:1.0.0"
     implementation "com.google.android.gms:play-services-maps:18.0.2"
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
     // cameraX
     implementation "androidx.camera:camera-camera2:$camerax_version"
